--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/terralist.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Terralist</title>
-  </head>
-  <body class="bg-slate-50 dark:bg-slate-900">
-    <main id="app"></main>
-    <script type="module" src="/src/pages/dashboard/main.ts"></script>
-  </body>
+
+    <link rel="icon" type="image/svg+xml" href="/terralist.svg" />
+</head>
+<body class="bg-slate-50 dark:bg-slate-900">
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
